# TabletopFramework

./: .gitignore  README.md
src/: CMakeLists.txt  README.md  cpp.hint
src/03_royal_game_of_ur/: CMakeLists.txt  main.cpp
src/framework/include/: RenderAPI_OpenGL.h  Texturing_OpenGL.h  camera.h  configuration_file.h  error_handling_OpenGL.h  framework_contexts.h  framework_exceptions.h  game_elements.h  game_graphics_facade_OpenGL.h  game_loading.h  game_loading_defaults.h  game_loading_utils.h  game_manager.h  game_object.h  interactables.h  my_utils.h  object_buffer.h  pathfinding.h  playing_board.h  playing_board_elements.h  string_utils.h  tabletop_framework.h
src/framework/shaders/: tabletop_fragment.frag.glsl  tabletop_selection_fragment.frag.glsl  tabletop_selection_vertex.vert.glsl  tabletop_vertex.vert.glsl
src/framework/src/: RenderAPI_OpenGL.cpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
